# Sysskill

./: Screen Choices.txt  hello.txt  test.txt
Inclass6/: arg.c  c2f.c  pretty.c  prettyy.cpp
a1/: happy_countries.sh
a2/MergeSort/: mergesort.c
a2/btree/: btree.c
a2/determined/: det.c
a2/life+engine/: life_engine.c
a2/sortedlist/: CMakeLists.txt  list.c  list.h
a2/tabutil/: CMakeLists.txt
a2/unscumble/: CMakeLists.txt  Makefile
assignment/a1/: extrm.sh  flatten.sh  happy_countries.sh  invite.sh  quota.sh
assignment/a2/MergeSort/: CMakeLists.txt
assignment/a2/btree/: CMakeLists.txt  btree.h
assignment/a2/determined/: CMakeLists.txt
assignment/a2/life+engine/: CMakeLists.txt
assignment/a2/tabutil/: tabutil.c
assignment/a2/unscumble/: unscramble.c
assignment/a3/bits/: CMakeLists.txt  bits.c
assignment/a3/disas/: CMakeLists.txt  disas.c
assignment/a4/a4handout/: CMakeLists.txt  main.c
inclass/Inclass6/: CMakeLists.txt  input .txt  prettyy.h
inclass/inclass8/: CMakeLists.txt  inclass8.c
inclass/inclass9/: bits.c  decToBinary.c  disas.c
inclass7/: inclass7.c
inclass9/: CMakeLists.txt
midterm/dotProduct/: CMakeLists.txt  dot.c
midterm/insertAt/: CMakeLists.txt  insertAt.c
midterm/isPrime/: CMakeLists.txt  isPrime.c
midterm/midterm q.3/: main.c
